# SC-cookiecutter-analysis-template

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  setup.cfg
{{ cookiecutter.repo_name }}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  environment.yml
{{ cookiecutter.repo_name }}/notebooks/: general_notebook_template.ipynb
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: _constants.py  _logger_formatting.py  logger_utils.py  pippo.py  setup.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/config/: logger.conf
