[metadata]
name = example
version = attr: example.__version__
author = '{{ cookiecutter.author_name }}'
author_email = 
url = 
description = '{{ cookiecutter.description }}'
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
license = '{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}'
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    

[options.entry_points]
console_scripts = 
    
[options.extras_require]
notebook = 
dev = 

[options.package_data]
example = data/schema.json, *.txt
* = README.md